# cool-window-manager

./: .gitignore  AGENTS.md  CONDITIONS.md  Cargo.toml  LICENSE  README.md  SCRIPTS.md  build.rs  install.sh  session-ses_3b79.md  test.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION.md  index.html  package.json
docs/css/: style.css
docs/js/: commands.js  demo.js  preview.js  terminal.js
examples/: 01-basic-shortcuts.jsonc  02-work-hours-conditions.jsonc  03-multi-monitor-setup.jsonc  04-home-office-locations.jsonc  05-app-state-conditions.jsonc  06-developer-workflow.jsonc  07-night-mode.jsonc  08-fallback-rules.jsonc  09-complex-conditions.jsonc  10-full-featured.jsonc
homebrew/: cwm.rb
scripts/: ci.sh  coverage.sh  list-releases.sh  manual-test.sh  release-beta.sh  release-stable.sh  spotlight_stub.c
site/: CNAME
site/js/: preview.js  terminal.js
src/: history.rs  lib.rs  main.rs  version.rs
src/actions/: command.rs  context.rs  error.rs  mod.rs  parse.rs  result.rs
src/actions/handlers/: close.rs  common.rs  config.rs  daemon.rs  focus.rs  get.rs  history.rs  install.rs  kill.rs  list.rs  maximize.rs  mod.rs  move_display.rs  move_window.rs  record.rs  resize.rs  spotlight.rs  system.rs
src/cli/: commands.rs  convert.rs  events.rs  exit_codes.rs  mod.rs  output.rs
src/conditions/: eval.rs  mod.rs  parser.rs  time.rs  types.rs
src/config/: json_schema.rs  mod.rs  schema.rs
src/daemon/: app_watcher.rs  display_watcher.rs  events.rs  hotkeys.rs  ipc.rs  launchd.rs  mod.rs
src/display/: mod.rs
src/installer/: completions.rs  github.rs  install.rs  mod.rs  paths.rs  rollback.rs  update.rs
src/spotlight/: generator.rs  icons.rs  mod.rs  signing.rs
src/window/: accessibility.rs  manager.rs  matching.rs  mod.rs
tests/: integration.rs
tests/docker/: Dockerfile.mock-server  Dockerfile.test-runner  docker-compose.ci.yml  docker-compose.yml
tests/integration_tests/: common.rs  test_channels.rs  test_cli_config.rs  test_cli_daemon.rs  test_cli_focus.rs  test_cli_get.rs  test_cli_maximize.rs  test_cli_move.rs  test_cli_move_display.rs  test_cli_resize.rs  test_cli_version.rs  test_completions.rs  test_conditions.rs  test_events.rs  test_history.rs  test_install.rs  test_list.rs  test_man_page.rs  test_rollback.rs  test_spotlight.rs  test_update.rs
tests/mock_server/: package.json  server.js
tests/scripts/: run-docker-tests.sh
