[package]
name = "cwm"
version = "0.1.0"
edition = "2021"
description = "A macOS window manager with CLI and global hotkeys"
license = "MIT"

[[bin]]
name = "cwm"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Fuzzy matching
strsim = "0.11"

# macOS APIs
core-foundation = "0.10"
core-graphics = "0.24"

# Async runtime for daemon
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Signal handling
libc = "0.2"

# Logging timestamps
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace", "NSScreen", "NSApplication", "NSGraphics"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSEnumerator", "NSDictionary", "NSValue"] }
