[package]
name = "cwm"
version = "0.1.0"
edition = "2021"
description = "A macOS window manager with CLI and global hotkeys"
license = "MIT"

[[bin]]
name = "cwm"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
dirs = "5"

# Fuzzy matching
strsim = "0.11"

# Async runtime for daemon
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Signal handling
libc = "0.2"

# Logging timestamps
chrono = { version = "0.4", features = ["serde"] }

# For installer and updates
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
semver = "1.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
indicatif = "0.17"
rand = "0.8"
num_cpus = "1.16"
shellexpand = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS APIs
core-foundation = "0.10"
core-graphics = "0.24"

objc2 = "0.6"
block2 = "0.6"

objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace", "NSScreen", "NSApplication", "NSGraphics"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSEnumerator", "NSDictionary", "NSValue", "NSNotification"] }

[build-dependencies]
chrono = "0.4"
